--- a/index.htm
+++ b/index.htm
@@ -82,6 +82,17 @@
       </div>
     </div>
     <p id="score">SCORE:</p>
+    <footer>
+      <p class="nome">
+        <img
+          class="logo"
+          src="img/favicon.ico"
+          alt="Leonardo
+    Lira"
+        />Copyright (c) 2022 Leonardo Lira
+      </p>
+    </footer>
+
     <script src="js/script.js"></script>
   </body>
 </html>
